--- a/client/src/app/components/liked-items/liked-items.component.scss
+++ b/client/src/app/components/liked-items/liked-items.component.scss
@@ -17,51 +17,68 @@ $semi-bold: 600;
 $medium: 500;
 $regular: 400;
 
-.bezbez-container {
+
+.item-container {
     width: 350px;
     height: 90px;
     display: flex;
     align-items: center;
     padding: 10px;
     border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid $periwinkle;
+    margin: 1em 1em 1em 1.7em;
 }
   
-.bezbez-image img {
+.item-image img {
     width: 90px;
     height: 90px;
-    border-radius: 50%;
+    border-radius: 25%;
     margin-right: 10px;
     margin-left: 10px;
 }
-  
-.bezbez-description {
+
+
+.item-description {
     flex: 1;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 10px;
 }
   
-.bezbez-details {
+.item-details {
+    width: 150px;
     display: flex;
     flex-direction: column;
 }
   
-.bezbez-name {
+.item-name {
     font-family: 'Inter', sans-serif;
-    font-size: 16px;
-    font-weight: $medium;
+    font-size: 18px;
+    font-weight: $semi-bold;
+    line-height: 140%;
+    letter-spacing: 0.3%;
+    margin-bottom: 3px;
 }
-  
-.bezbez-speciality {
+
+.item-price {
     font-family: 'Inter', sans-serif;
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: $regular;
+    line-height: 150%;
+    letter-spacing: 0.3%;
     color: $grey;
 }
-  
-.bezbez-actions ion-icon {
-    font-size: 30px;
-    color: $navy;
+
+.item-heart {
+    height: 80px;
+    display: flex;
+    align-items: center;
     margin-right: 10px;
 }
-  
+
+.item-heart ion-icon {
+    font-size: 24px;
+    color: $navy; 
+    margin: 0;
+}
