--- a/client/src/app/pages/cart/cart.page.scss
+++ b/client/src/app/pages/cart/cart.page.scss
@@ -7,125 +7,37 @@ $peach: #DFAEA2;
 $grey: #918f8f;
 
 /* Typography */
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&family=Sora:wght@100..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&display=swap');
 
-ion-header {
-    height: 60px; 
-    margin-top: 20px;
-    margin-bottom: 5px;
-  
-    .header-content {
-      display: flex;
-      align-items: center;
-      padding-left: 10px; 
-      height: 100%; 
-    }
-  
-    img {
-      width: 80px; 
-      height: auto; 
-      margin-right: 10px; 
-    }
-  
-    .title {
-      font-family: 'Sora', sans-serif;
-      font-size: 24px;
-      font-weight: 600;
-      line-height: 120%;
-      letter-spacing: -2%;
-      margin: 0; 
-    }
-}
-
-
-.upper-content {
-    height: 110px;
-    width: 100%;
-    position: fixed;
-    background-color: white; 
-    z-index: 101;
-} 
-
-.custom-searchbar {
+.header-content {
     display: flex;
     align-items: center;
-    background-color: #F5F5F5; 
-    border-radius: 20px;
-    height: 50px; 
-    padding: 0 10px;
-    margin: 0 15px;
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: 100; // Ensure it's above other content
-}
-  
-.search-input {
-    flex: 1;
-    border: none;
-    background: transparent;
-    height: 100%;
-    font-size: 16px;
-    color: #C2C2C2;
-}
-  
-.search-button {
-    background: transparent;
-    border: none;
-    cursor: pointer;
-}
-  
-.search-button ion-icon {
-    font-size: 24px;
-    color: #C2C2C2;
+    justify-content: space-between; 
+    padding: 0 15px 0 10px;
+    height: 60px;
+    margin: 0;
+    margin-top: 10px;
+    background-color: white;
 }
 
-.buttons-container {
-    display: flex;
-    justify-content: center; 
-    margin-top: 70px; 
-    position: fixed; // Keep the buttons container fixed
-    left: 0;
-    right: 0;
-    z-index: 100;
-}
-  
-.button {
-    display: flex;
-    align-items: center;
-    padding: 10px 20px; 
-    margin-right: 10px;
-    border: .2px solid rgb(46, 45, 45);
-    background-color: transparent;
-    cursor: pointer;
-    border-radius: 10px; 
-    height: 30px; 
+.title {
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 140%;
+    letter-spacing: 0.3%;
+    margin: 0; 
+    padding: 0; 
 }
 
-.button ion-icon {
-    height: 20px;
-    width: 20px;
-    margin-right: 5px;
+ion-icon {
+    font-size: 26px; 
 }
 
-.button p {
-    font-size: 12px;
-    margin-left: 2px;
-    font-family: "Encode Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
-  
-.current-button {
-    background-color: $navy;
-    color: white;
-}
-  
-.bezbezes-container {
+.item-container {
     margin-top: 100px;
     display: flex;
     flex-wrap: wrap;
@@ -137,7 +49,77 @@ ion-header {
 }
 
 .empty-space {
-    height: 180px;
+    height: 400px;
+}
+
+.payment {
+  position: fixed;
+  width: 90%;
+  bottom: 90px;
+  background-color: white;
+  padding: 20px;
+}
+
+.payment-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.detail {
+    display: flex;
+    justify-content: space-between;
+}
+
+.detail .title {
+    margin: 0;
+    font-family: 'Encode Sans', sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: auto;
+    letter-spacing: 0%;
+}
+
+.detail .number {
+    margin: 0;
+    font-family: 'Encode Sans', sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: auto;
+    letter-spacing: 0%;
+}
+
+.divider {
+  border-top: 1px solid #ccc;
+  margin: 10px 0;
+}
+
+.pay-button {
+    width: 111px;
+    height: 51px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 40px;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    margin-left: 70%;
+    margin-top: 5px;
+}
+
+.pay-button ion-icon {
+  margin-right: 5px;
+  font-size: 24px;
+}
+.pay-button p {
+    font-family: 'DM Sans', sans-serif;
+    font-size: 16px;
+    font-weight: lighter;
+    line-height: 20%;
+    letter-spacing: .15px;
 }
 
 ion-footer {
@@ -163,7 +145,7 @@ ion-footer {
     left: 50%;
     transform: translateX(-50%);
     padding: 0 45px; /* Adjust horizontal gap between items */
-    z-index: 101;
+    z-index: 100;
 }
   
 .navbar-button {
@@ -200,6 +182,3 @@ ion-footer {
     left: 50%;
     transform: translateX(-50%);
 }
-
-
-  
