--- a/client/src/app/pages/check/check.page.html
+++ b/client/src/app/pages/check/check.page.html
@@ -35,18 +35,20 @@
   <div class="empty-space"></div>
 </ion-content>
 
-<div class="bottom-navbar">
-  <button class="navbar-button">
-    <ion-icon name="home"></ion-icon>
-    <div class="indicator"></div>
-  </button>
-  <button class="navbar-button">
-    <ion-icon name="bag-handle-outline"></ion-icon>
-  </button>
-  <button class="navbar-button">
-    <ion-icon name="heart-outline"></ion-icon>
-  </button>
-  <button class="navbar-button">
-    <ion-icon name="person-outline"></ion-icon>
-  </button>
-</div>
+<ion-footer>
+  <div class="bottom-navbar">
+    <button class="navbar-button">
+      <ion-icon name="home"></ion-icon>
+      <div class="indicator"></div>
+    </button>
+    <button class="navbar-button">
+      <ion-icon name="bag-handle-outline"></ion-icon>
+    </button>
+    <button class="navbar-button">
+      <ion-icon name="heart-outline"></ion-icon>
+    </button>
+    <button class="navbar-button">
+      <ion-icon name="person-outline"></ion-icon>
+    </button>
+  </div>
+</ion-footer>
