--- a/client/src/app/pages/profile/profile.page.scss
+++ b/client/src/app/pages/profile/profile.page.scss
@@ -5,139 +5,113 @@ $cloud: #FFFCF5;
 $maroon: #895159;
 $peach: #DFAEA2;
 $grey: #918f8f;
+$red: #FB0303;
 
 /* Typography */
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&family=Sora:wght@100..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&display=swap');
 
-ion-header {
-    height: 60px; 
-    margin-top: 20px;
-    margin-bottom: 5px;
-  
-    .header-content {
-      display: flex;
-      align-items: center;
-      padding-left: 10px; 
-      height: 100%; 
-    }
-  
-    img {
-      width: 80px; 
-      height: auto; 
-      margin-right: 10px; 
-    }
-  
-    .title {
-      font-family: 'Sora', sans-serif;
-      font-size: 24px;
-      font-weight: 600;
-      line-height: 120%;
-      letter-spacing: -2%;
-      margin: 0; 
-    }
-}
-
-
-.upper-content {
-    height: 110px;
-    width: 100%;
-    position: fixed;
-    background-color: white; 
-    z-index: 101;
-} 
-
-.custom-searchbar {
+.header-content {
     display: flex;
     align-items: center;
-    background-color: #F5F5F5; 
-    border-radius: 20px;
-    height: 50px; 
-    padding: 0 10px;
-    margin: 0 15px;
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: 100; // Ensure it's above other content
+    padding: 0 15px 0 10px;
+    height: 60px;
+    margin: 0;
+    margin-top: 10px;
+    background-color: white;
 }
-  
-.search-input {
-    flex: 1;
+
+.title {
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 140%;
+    letter-spacing: 0.3%;
+    margin: 0; 
+    padding: 0 9em; 
+}
+
+.pfp-container {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    width: 80%;
+    height: 25%;
+    margin: 3em;
     border: none;
-    background: transparent;
-    height: 100%;
-    font-size: 16px;
-    color: #C2C2C2;
 }
-  
-.search-button {
-    background: transparent;
-    border: none;
-    cursor: pointer;
+
+.pfp-container img {
+    height: 190px;
+    width: 190px;
+    border-radius: 90px;
+    object-fit: cover;
+    margin-bottom: 10px;
 }
-  
-.search-button ion-icon {
-    font-size: 24px;
-    color: #C2C2C2;
+
+.user-name {
+    font-family: 'Sora', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 140%;
+    letter-spacing: .3%;
+    margin: 0;
 }
 
 .buttons-container {
+    width: 90%;
+    height: 30%;
+    flex-direction: column;
+    margin: 0.5em;
+    gap: 10px;
+} 
+
+.details {
     display: flex;
-    justify-content: center; 
-    margin-top: 70px; 
-    position: fixed; // Keep the buttons container fixed
-    left: 0;
-    right: 0;
-    z-index: 100;
-}
-  
-.button {
-    display: flex;
-    align-items: center;
-    padding: 10px 20px; 
-    margin-right: 10px;
-    border: .2px solid rgb(46, 45, 45);
-    background-color: transparent;
-    cursor: pointer;
-    border-radius: 10px; 
-    height: 30px; 
 }
 
-.button ion-icon {
-    height: 20px;
-    width: 20px;
+.details ion-icon {
+    margin-left: 10px;
     margin-right: 5px;
 }
 
-.button p {
-    font-size: 12px;
-    margin-left: 2px;
-    font-family: "Encode Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
-  
-.current-button {
-    background-color: $navy;
-    color: white;
-}
-  
-.bezbezes-container {
-    margin-top: 100px;
+.buttons-container button {
+    width: 380px;
+    height: 60px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 15px;
-    gap: 15px;
-    position: relative;
-    z-index: 99;
+    align-items: center;
+    background-color: white;
+    justify-content: space-between;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 40px;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    margin: 1.3em;
+    color: $navy;
 }
 
-.empty-space {
-    height: 180px;
+.logout {
+  background-color: $red;
+}
+
+.buttons-container p {
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 140%;
+    letter-spacing: 0.3%;
+    margin: 0;
+}
+
+ion-icon {
+  font-size: 24px;
+}
+
+.logout {
+    color: $red !important;
 }
 
 ion-footer {
@@ -163,7 +137,7 @@ ion-footer {
     left: 50%;
     transform: translateX(-50%);
     padding: 0 45px; /* Adjust horizontal gap between items */
-    z-index: 101;
+    z-index: 100;
 }
   
 .navbar-button {
@@ -200,6 +174,3 @@ ion-footer {
     left: 50%;
     transform: translateX(-50%);
 }
-
-
-  
