--- a/client/src/app/pages/welcome/welcome.page.scss
+++ b/client/src/app/pages/welcome/welcome.page.scss
@@ -98,7 +98,7 @@ ion-header {
     align-items: center;
     padding: 10px 20px; 
     margin-right: 10px;
-    border: .2px solid rgb(46, 45, 45);
+    border: .5px solid #c5c2c2;
     background-color: transparent;
     cursor: pointer;
     border-radius: 10px; 
