--- a/client/src/app/pages/cart/cart.page.html
+++ b/client/src/app/pages/cart/cart.page.html
@@ -41,17 +41,17 @@
 <ion-footer>
   <div class="bottom-navbar">
     <button class="navbar-button">
-      <ion-icon name="home-outline"></ion-icon>
+      <ion-icon name="home-outline" (click)="navigateTo('/all-items')"></ion-icon>
     </button>
     <button class="navbar-button">
-      <ion-icon name="bag-handle"></ion-icon>
+      <ion-icon name="bag-handle" (click)="navigateTo('/cart')"></ion-icon>
       <div class="indicator"></div>
     </button>
     <button class="navbar-button">
-      <ion-icon name="heart-outline"></ion-icon>
+      <ion-icon name="heart-outline" (click)="navigateTo('/likes')"></ion-icon>
     </button>
     <button class="navbar-button">
-      <ion-icon name="person-outline"></ion-icon>
+      <ion-icon name="person-outline" (click)="navigateTo('/profile')"></ion-icon>
     </button>
   </div>
 </ion-footer>
