--- a/client/src/app/pages/likes/likes.page.html
+++ b/client/src/app/pages/likes/likes.page.html
@@ -20,17 +20,17 @@
 <ion-footer>
   <div class="bottom-navbar">
     <button class="navbar-button">
-      <ion-icon name="home-outline"></ion-icon>
+      <ion-icon name="home-outline" (click)="navigateTo('/all-items')"></ion-icon>
     </button>
     <button class="navbar-button">
-      <ion-icon name="bag-handle-outline"></ion-icon>
+      <ion-icon name="bag-handle-outline" (click)="navigateTo('/cart')"></ion-icon>
     </button>
     <button class="navbar-button">
-      <ion-icon name="heart"></ion-icon>
+      <ion-icon name="heart" (click)="navigateTo('/likes')"></ion-icon>
       <div class="indicator"></div>
     </button>
     <button class="navbar-button">
-      <ion-icon name="person-outline"></ion-icon>
+      <ion-icon name="person-outline" (click)="navigateTo('/profile')"></ion-icon>
     </button>
   </div>
 </ion-footer>
