--- a/client/src/app/pages/welcome/welcome.page.html
+++ b/client/src/app/pages/welcome/welcome.page.html
@@ -37,17 +37,17 @@
 <ion-footer>
   <div class="bottom-navbar">
     <button class="navbar-button">
-      <ion-icon name="home"></ion-icon>
+      <ion-icon name="home" (click)="navigateTo('/all-items')"></ion-icon>
       <div class="indicator"></div>
     </button>
-    <button class="navbar-button">
+    <button class="navbar-button" (click)="navigateTo('/cart')">
       <ion-icon name="bag-handle-outline"></ion-icon>
     </button>
     <button class="navbar-button">
-      <ion-icon name="heart-outline"></ion-icon>
+      <ion-icon name="heart-outline" (click)="navigateTo('/likes')"></ion-icon>
     </button>
     <button class="navbar-button">
-      <ion-icon name="person-outline"></ion-icon>
+      <ion-icon name="person-outline" (click)="navigateTo('/profile')"></ion-icon>
     </button>
   </div>
 </ion-footer>
