--- a/client/src/app/pages/home-p1/home-p1.page.scss
+++ b/client/src/app/pages/home-p1/home-p1.page.scss
@@ -78,16 +78,14 @@ ion-content {
     }
       
     .button-navy {
-        position: absolute;
-        top: 30px;
-        background-color: $navy;
-        border-radius: 40px;
-        padding: 10px 20px;
-        text-align: center;
-        cursor: pointer;
+        --position: relative;
+        --top: 30px;
+        --border-radius: 40px;
+        --padding: 10px 20px;
+        --text-align: center;
         height: 56px;
         width: 269px;
-        border: none;
+        --border: none;
     }
 
     .button-navy h5 {
@@ -101,9 +99,16 @@ ion-content {
         text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     }
 
-    .skip-text {
-        height: 22px;
-        text-align: center;
+    .skip-btn {
+        --position: absolute;
+        --top: 30px;
+        --border-radius: 40px;
+        --padding: 10px 20px;
+        --text-align: center;
+        height: 56px;
+        width: 269px;
+        --border: none;
+        padding-left: 80px !important;
     }
       
     .large-semi-bold {
