--- a/client/src/app/pages/home-p3/home-p3.page.html
+++ b/client/src/app/pages/home-p3/home-p3.page.html
@@ -12,18 +12,18 @@
   <p class="small-regular">Seemless payment and speedy delivery. Start shopping smarter today.</p>
 
   <div class="button-container">
-    <ion-button style="--background:#374375" class="button-navy">
+    <ion-button style="--background:#374375" class="button-navy" href="/all-items">
       <h5 slot="start">Start your bezbez</h5>
     </ion-button>
   </div>
 
   <div class="button-container">
-    <ion-button style="--background:#9894b4" class="button-periwinkle">
+    <ion-button style="--background:#9894b4" class="button-periwinkle" href="/all-items">
       <h5 slot="start">Sign up</h5>
     </ion-button>
   </div>
 
-  <ion-button class="skip-btn" fill="clear">
+  <ion-button class="skip-btn" fill="clear" href="/all-items">
     <p slot="start" class="large-semi-bold">Already have an account?</p>
   </ion-button>
 
