--- a/client/src/app/pages/payment/payment.page.html
+++ b/client/src/app/pages/payment/payment.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-button href="/all-items" class="back-button">
+  <ion-button href="/cart" class="back-button">
     <ion-icon slot="icon-only" name="chevron-back-outline" class="back-icon"></ion-icon>
   </ion-button>
   <p class="title">Payment</p>
