--- a/client/src/app/pages/welcome/welcome.page.scss
+++ b/client/src/app/pages/welcome/welcome.page.scss
@@ -39,93 +39,80 @@ ion-header {
       letter-spacing: -2%;
       margin: 0; 
     }
+
+    .search-button {
+        --background: transparent; 
+        --box-shadow: none; 
+        margin-right: .5em;
+    }
+    
+    .search-button:hover {
+        --background: transparent !important; 
+    }
+      
+    .search-button:active {
+        --background-activated: transparent !important;  
+    }
+      
+    .search-button:focus {
+        --background-activated: transparent !important;  
+    }
+      
+    .search-button::part(native) {
+        background-color: transparent;
+    }
+    
+    ion-icon.search-icon {
+        font-size: 30px; 
+        margin-right: 5px; 
+        color: #374375;
+        margin-right: 0;
+    }
 }
 
 .upper-content {
-    height: 110px;
+    height: 70px;
     width: 100%;
     position: fixed;
     background-color: white; 
     z-index: 101;
 }
 
-.custom-searchbar {
+.buttons-container {
     display: flex;
-    align-items: center;
-    background-color: #F5F5F5; 
-    border-radius: 20px;
-    height: 50px; 
-    padding: 0 10px;
-    margin: 0 15px;
+    justify-content: center;
     position: fixed;
     left: 0;
     right: 0;
-    z-index: 100; // Ensure it's above other content
-}
-  
-.search-input {
-    flex: 1;
-    border: none;
-    background: transparent;
-    height: 100%;
-    font-size: 16px;
-    color: #C2C2C2;
-}
-  
-.search-button {
-    background: transparent;
-    border: none;
-    cursor: pointer;
-}
-  
-.search-button ion-icon {
-    font-size: 24px;
-    color: #C2C2C2;
-}
-
-.buttons-container {
-    display: flex;
-    justify-content: center; 
-    margin-top: 70px; 
-    position: fixed; // Keep the buttons container fixed
-    left: 0;
-    right: 0;
     z-index: 100;
-}
-  
-.button {
-    display: flex;
-    align-items: center;
-    padding: 10px 20px; 
-    margin-right: 10px;
-    border: .5px solid #c5c2c2;
-    background-color: transparent;
-    cursor: pointer;
-    border-radius: 10px; 
-    height: 30px; 
+    background-color: #ffff;
+    height: 50px;
 }
 
-.button ion-icon {
-    height: 20px;
-    width: 20px;
-    margin-right: 5px;
+ion-button {
+    height: 5Opx !important;
 }
 
-.button p {
-    font-size: 12px;
-    margin-left: 2px;
-    font-family: "Encode Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
-  
 .current-button {
-    background-color: $navy;
-    color: white;
+    --background: #374375; 
+    --border-color: transparent; 
+    --color: #ffffff; 
+    height: 40px;
+}
+  
+.outlined-button {
+    --background: #ffffff; 
+    --border-color: #374375; 
+    --color: #374375; 
+    height: 40px;
+}
+
+ion-button ion-icon {
+    size: 24px;
 }
   
 .items-container {
-    margin-top: 100px;
+    margin-top: 50px;
     width: auto; 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(calc(200px - 20px), 1fr)); 
@@ -140,7 +127,7 @@ ion-header {
 }
 
 ion-footer {
-    height: 100px; 
+    height: 100px;
     background-color: white;
     position: fixed;
     bottom: 0;
@@ -148,7 +135,7 @@ ion-footer {
     width: 100%;
     z-index: 101;
 }
-
+  
 .bottom-navbar {
     width: 300px;
     height: 64px;
@@ -158,16 +145,14 @@ ion-footer {
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    bottom: 30px;
+    bottom: 30px; 
     left: 50%;
     transform: translateX(-50%);
     padding: 0 45px; 
-    z-index: 101;
+    z-index: 100;
 }
   
 .navbar-button {
-    width: 50px;
-    height: 50px;
     background-color: #445078;
     border-radius: 100px;
     border: none;
@@ -176,29 +161,27 @@ ion-footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative; /* Position relative for absolute positioning of indicator */
+    position: relative; 
     transition: background-color 0.3s ease;
 }
   
-.navbar-button ion-icon {
-    font-size: 26px;
+ion-icon.navbar-icon {
+    font-size: 26px !important;
     color: white;
 }
-
+  
 .navbar-button:hover {
-    background-color: #2d3e5f; /* Adjust hover background color */
+    background-color: #2d3e5f; 
 }
-
+  
 .indicator {
     width: 6px;
     height: 6px;
     background-color: white;
     border-radius: 50%;
     position: absolute;
-    bottom: 3px; /* Position the dot below the icon */
+    bottom: -8px; 
     left: 50%;
     transform: translateX(-50%);
 }
 
-
-  
