--- a/client/src/app/pages/cart/cart.page.html
+++ b/client/src/app/pages/cart/cart.page.html
@@ -1,8 +1,10 @@
 <ion-header>
   <div class="header-content">
-    <ion-icon name="chevron-back-outline" class="back" (click)="goBack()"></ion-icon>
+    <ion-button href="/all-items" class="back-button">
+      <ion-icon slot="icon-only" name="chevron-back-outline" class="back-icon"></ion-icon>
+    </ion-button>
     <p class="title">Cart</p>
-    <ion-icon name="bag-handle-outline"></ion-icon>
+    <ion-icon name="bag-handle-outline" class="header-icon"></ion-icon>
   </div>
 </ion-header>
 
@@ -30,28 +32,28 @@
         <p class="number">{{ subTotal }} DT</p>
       </div>
     </div>
-    <button class="pay-button">
+    <ion-button class="pay-button" fill="clear" href="/payment">
       <ion-icon name="card-outline"></ion-icon>
-      <p>Pay</p>
-    </button>
+      <ion-label>Pay</ion-label>
+    </ion-button>
   </div>
 </ion-content>
 
 
 <ion-footer>
   <div class="bottom-navbar">
-    <button class="navbar-button">
-      <ion-icon name="home-outline" (click)="navigateTo('/all-items')"></ion-icon>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="bag-handle" (click)="navigateTo('/cart')"></ion-icon>
+    <ion-button class="navbar-button" fill="clear" href="/all-items">
+      <ion-icon name="home-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/cart">
+      <ion-icon name="bag-handle" class="navbar-icon"></ion-icon>
       <div class="indicator"></div>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="heart-outline" (click)="navigateTo('/likes')"></ion-icon>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="person-outline" (click)="navigateTo('/profile')"></ion-icon>
-    </button>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/likes">
+      <ion-icon name="heart-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/profile">
+      <ion-icon name="person-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
   </div>
 </ion-footer>
