--- a/client/src/app/pages/cart/cart.page.scss
+++ b/client/src/app/pages/cart/cart.page.scss
@@ -23,6 +23,34 @@ $grey: #918f8f;
     background-color: white;
 }
 
+.back-button {
+    --background: transparent; 
+    --box-shadow: none; 
+}
+  
+.back-button:hover {
+    --background: transparent !important; 
+}
+  
+.back-button:active {
+    --background-activated: transparent !important;  
+}
+  
+.back-button:focus {
+    --background-activated: transparent !important;  
+}
+  
+.back-button::part(native) {
+    background-color: transparent;
+}
+
+ion-icon.back-icon {
+    font-size: 24px; 
+    margin-right: 5px; 
+    color: black;
+    margin-left: 0;
+}
+
 .title {
     font-family: 'Inter', sans-serif;
     font-size: 20px;
@@ -33,8 +61,9 @@ $grey: #918f8f;
     padding: 0; 
 }
 
-ion-icon {
-    font-size: 26px; 
+ion-icon.header-icon {
+    font-size: 26px !important;
+    color: black;
 }
 
 .item-container {
@@ -95,8 +124,8 @@ ion-icon {
 }
 
 .pay-button {
-    width: 111px;
-    height: 51px;
+    width: 100px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -109,21 +138,24 @@ ion-icon {
     margin-left: 70%;
     margin-top: 5px;
 }
-
+  
 .pay-button ion-icon {
-  margin-right: 5px;
-  font-size: 24px;
+    margin-right: 5px;
+    font-size: 24px;
+    color: black;
 }
-.pay-button p {
+  
+.pay-button ion-label {
     font-family: 'DM Sans', sans-serif;
     font-size: 16px;
-    font-weight: lighter;
+    font-weight: normal;
     line-height: 20%;
     letter-spacing: .15px;
+    color: black;
 }
 
 ion-footer {
-    height: 100px; 
+    height: 100px;
     background-color: white;
     position: fixed;
     bottom: 0;
@@ -131,7 +163,7 @@ ion-footer {
     width: 100%;
     z-index: 101;
 }
-
+  
 .bottom-navbar {
     width: 300px;
     height: 64px;
@@ -141,16 +173,14 @@ ion-footer {
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    bottom: 30px; /* Adjust the value as needed */
+    bottom: 30px; 
     left: 50%;
     transform: translateX(-50%);
-    padding: 0 45px; /* Adjust horizontal gap between items */
+    padding: 0 45px; 
     z-index: 100;
 }
   
 .navbar-button {
-    width: 50px;
-    height: 50px;
     background-color: #445078;
     border-radius: 100px;
     border: none;
@@ -159,26 +189,26 @@ ion-footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative; /* Position relative for absolute positioning of indicator */
+    position: relative; 
     transition: background-color 0.3s ease;
 }
   
-.navbar-button ion-icon {
-    font-size: 26px;
+ion-icon.navbar-icon {
+    font-size: 26px !important;
     color: white;
 }
-
+  
 .navbar-button:hover {
-    background-color: #2d3e5f; /* Adjust hover background color */
+    background-color: #2d3e5f; 
 }
-
+  
 .indicator {
     width: 6px;
     height: 6px;
     background-color: white;
     border-radius: 50%;
     position: absolute;
-    bottom: 3px; /* Position the dot below the icon */
+    bottom: -8px; 
     left: 50%;
     transform: translateX(-50%);
 }
