--- a/client/src/app/pages/check/check.page.html
+++ b/client/src/app/pages/check/check.page.html
@@ -2,28 +2,23 @@
   <div class="header-content">
     <img src="../../../assets/images/logo-bezbez.png" alt="Logo">
     <p class="title">Welcome to bezbez!</p>
+    <ion-button class="search-button" href="/search-bezbezes">
+      <ion-icon slot="icon-only" name="search-outline" class="search-icon"></ion-icon>
+    </ion-button>
   </div>
 </ion-header>
 
 <ion-content>
   <div class="upper-content">
-    <div class="custom-searchbar">
-      <input type="text" placeholder="search..." class="search-input">
-      <button class="search-button">
-        <ion-icon name="search-outline"></ion-icon>
-      </button>
-    </div>
-  
-    <!-- Buttons -->
     <div class="buttons-container">
-      <button class="button" (click)="navigateToAllItems()">
-        <ion-icon name="apps-outline"></ion-icon>
-        <p>All Items</p>
-      </button>
-      <button class="button current-button">
-        <ion-icon name="albums"></ion-icon>
-        <p>Check Bezbezes</p>
-      </button>
+      <ion-button fill="outline" class="outlined-button" href="/all-items">
+        <ion-icon slot="start" name="apps-outline"></ion-icon>
+        All items
+      </ion-button>
+      <ion-button class="current-button">
+        <ion-icon slot="start" name="albums-outline"></ion-icon>
+        Check Bezbezes
+      </ion-button>
     </div>
   </div>
   
@@ -37,18 +32,18 @@
 
 <ion-footer>
   <div class="bottom-navbar">
-    <button class="navbar-button">
-      <ion-icon name="home" (click)="navigateTo('/all-items')"></ion-icon>
+    <ion-button class="navbar-button" fill="clear" href="/all-items">
+      <ion-icon name="home" class="navbar-icon"></ion-icon>      
       <div class="indicator"></div>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="bag-handle-outline" (click)="navigateTo('/cart')"></ion-icon>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="heart-outline" (click)="navigateTo('/likes')"></ion-icon>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="person-outline" (click)="navigateTo('/profile')"></ion-icon>
-    </button>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/cart">
+      <ion-icon name="bag-handle-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/likes">
+      <ion-icon name="heart-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/profile">
+      <ion-icon name="person-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
   </div>
 </ion-footer>
