--- a/client/src/app/pages/likes/likes.page.html
+++ b/client/src/app/pages/likes/likes.page.html
@@ -1,8 +1,10 @@
 <ion-header>
   <div class="header-content">
-    <ion-icon name="chevron-back-outline" class="back" (click)="goBack()"></ion-icon>
+    <ion-button href="/all-items" class="back-button">
+      <ion-icon slot="icon-only" name="chevron-back-outline" class="back-icon"></ion-icon>
+    </ion-button>
     <p class="title">Likes</p>
-    <ion-icon name="heart-outline"></ion-icon>
+    <ion-icon name="heart-outline" class="header-icon"></ion-icon>
   </div>
 </ion-header>
 
@@ -19,18 +21,18 @@
 
 <ion-footer>
   <div class="bottom-navbar">
-    <button class="navbar-button">
-      <ion-icon name="home-outline" (click)="navigateTo('/all-items')"></ion-icon>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="bag-handle-outline" (click)="navigateTo('/cart')"></ion-icon>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="heart" (click)="navigateTo('/likes')"></ion-icon>
+    <ion-button class="navbar-button" fill="clear" href="/all-items">
+      <ion-icon name="home-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/cart">
+      <ion-icon name="bag-handle-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/likes">
+      <ion-icon name="heart" class="navbar-icon"></ion-icon>
       <div class="indicator"></div>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="person-outline" (click)="navigateTo('/profile')"></ion-icon>
-    </button>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/profile">
+      <ion-icon name="person-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
   </div>
 </ion-footer>
