--- a/client/src/app/pages/profile/profile.page.scss
+++ b/client/src/app/pages/profile/profile.page.scss
@@ -115,7 +115,7 @@ ion-icon {
 }
 
 ion-footer {
-    height: 100px; 
+    height: 100px;
     background-color: white;
     position: fixed;
     bottom: 0;
@@ -123,7 +123,7 @@ ion-footer {
     width: 100%;
     z-index: 101;
 }
-
+  
 .bottom-navbar {
     width: 300px;
     height: 64px;
@@ -133,16 +133,14 @@ ion-footer {
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    bottom: 30px; /* Adjust the value as needed */
+    bottom: 30px; 
     left: 50%;
     transform: translateX(-50%);
-    padding: 0 45px; /* Adjust horizontal gap between items */
+    padding: 0 45px; 
     z-index: 100;
 }
   
 .navbar-button {
-    width: 50px;
-    height: 50px;
     background-color: #445078;
     border-radius: 100px;
     border: none;
@@ -151,26 +149,26 @@ ion-footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative; /* Position relative for absolute positioning of indicator */
+    position: relative; 
     transition: background-color 0.3s ease;
 }
   
-.navbar-button ion-icon {
-    font-size: 26px;
+ion-icon.navbar-icon {
+    font-size: 26px !important;
     color: white;
 }
-
+  
 .navbar-button:hover {
-    background-color: #2d3e5f; /* Adjust hover background color */
+    background-color: #2d3e5f; 
 }
-
+  
 .indicator {
     width: 6px;
     height: 6px;
     background-color: white;
     border-radius: 50%;
     position: absolute;
-    bottom: 3px; /* Position the dot below the icon */
+    bottom: -8px; 
     left: 50%;
     transform: translateX(-50%);
 }
