--- a/client/src/app/pages/welcome/welcome.page.html
+++ b/client/src/app/pages/welcome/welcome.page.html
@@ -2,33 +2,28 @@
   <div class="header-content">
     <img src="../../../assets/images/logo-bezbez.png" alt="Logo">
     <p class="title">Welcome to bezbez!</p>
+    <ion-button class="search-button" href="/search-articles">
+      <ion-icon slot="icon-only" name="search-outline" class="search-icon"></ion-icon>
+    </ion-button>
   </div>
 </ion-header>
 
 <ion-content>
   <div class="upper-content">
-    <div class="custom-searchbar">
-      <input type="text" placeholder="search..." class="search-input">
-      <button class="search-button">
-        <ion-icon name="search-outline"></ion-icon>
-      </button>
-    </div>
-  
-    <!-- Buttons -->
     <div class="buttons-container">
-      <button class="button current-button">
-        <ion-icon name="apps-outline"></ion-icon>
-        <p>All Items</p>
-      </button>
-      <button class="button" (click)="navigateToCheckBezbezes()">
-        <ion-icon name="albums-outline"></ion-icon>
-        <p>Check Bezbezes</p>
-      </button>
+      <ion-button class="current-button">
+        <ion-icon slot="start" name="apps-outline"></ion-icon>
+        All items
+      </ion-button>
+      <ion-button fill="outline" class="outlined-button" href="/check">
+        <ion-icon slot="start" name="albums-outline"></ion-icon>
+        Check Bezbezes
+      </ion-button>
     </div>
   </div>
 
   <div class="items-container">
-    <app-item *ngFor="let item of items" [item]="item" (click)="navigateToItemDetails(item.item_id)"></app-item>
+    <app-item *ngFor="let item of items" [item]="item"></app-item>
   </div>
 
   <div class="empty-space"></div>
@@ -36,18 +31,18 @@
 
 <ion-footer>
   <div class="bottom-navbar">
-    <button class="navbar-button">
-      <ion-icon name="home" (click)="navigateTo('/all-items')"></ion-icon>
+    <ion-button class="navbar-button" fill="clear" href="/all-items">
+      <ion-icon name="home" class="navbar-icon"></ion-icon>
       <div class="indicator"></div>
-    </button>
-    <button class="navbar-button" (click)="navigateTo('/cart')">
-      <ion-icon name="bag-handle-outline"></ion-icon>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="heart-outline" (click)="navigateTo('/likes')"></ion-icon>
-    </button>
-    <button class="navbar-button">
-      <ion-icon name="person-outline" (click)="navigateTo('/profile')"></ion-icon>
-    </button>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/cart">
+      <ion-icon name="bag-handle-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/likes">
+      <ion-icon name="heart-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
+    <ion-button class="navbar-button" fill="clear" href="/profile">
+      <ion-icon name="person-outline" class="navbar-icon"></ion-icon>
+    </ion-button>
   </div>
 </ion-footer>
