Added routing to home page

--- a/client/src/app/pages/home/home.page.html
+++ b/client/src/app/pages/home/home.page.html
@@ -1,5 +1,7 @@
 <ion-content class="ion-padding">
   <div class="background">
-    <img src="../../../assets/images/logo-bezbez.png" alt="Bezbez Logo">
+    <ion-button href="/home/p1">
+      <img src="../../../assets/images/logo-bezbez.png" alt="Bezbez Logo">
+    </ion-button>
   </div>
 </ion-content>
