--- a/client/src/app/pages/home/home.page.scss
+++ b/client/src/app/pages/home/home.page.scss
@@ -7,6 +7,29 @@ ion-content {
     height: 100%;
   }
 
+  ion-button {
+    --background: transparent; 
+    --box-shadow: none; 
+    border: none !important;
+    padding: 0px !important;
+  }
+  
+  ion-button:hover {
+    --background: transparent !important; 
+  }
+  
+  ion-button:active {
+    --background-activated: transparent !important;  
+  }
+  
+  ion-button:focus {
+    --background-activated: transparent !important;  
+  }
+  
+  ion-button::part(native) {
+    background-color: transparent;
+  }
+
   img {
     max-width: 80%; 
     max-height: 80%;
