adding shoper interfaces

--- a/client/src/app/components/shop-nav-bar/shop-nav-bar.component.html
+++ b/client/src/app/components/shop-nav-bar/shop-nav-bar.component.html
@@ -2,7 +2,7 @@
   <ion-button class="navbar-button" (click)="gotoHomePage()">
     <ion-icon name="stats-chart-outline"></ion-icon>
   </ion-button>
-  <ion-button class="navbar-button" (click)="gotoHomePage()">
+  <ion-button class="navbar-button" href="/home-shop">
     <ion-icon name="storefront-outline"></ion-icon>
   </ion-button>
   <ion-button class="navbar-button" (click)="gotoHomePage()">
