--- a/client/src/app/pages/shop/home-shop/home-shop.page.html
+++ b/client/src/app/pages/shop/home-shop/home-shop.page.html
@@ -9,10 +9,7 @@
 <div class="center-image ">
 <img  src="../../../assets/icon/kit.png" alt="">
 <h2> Start adding your first product</h2>
-<ion-button fill="outline" > add product</ion-button>
+<ion-button fill="outline" href="/add-product-shop1" > add product</ion-button>
 </div>
 <app-shop-nav-bar></app-shop-nav-bar>
 
-<ion-button class="navbar-button" >
-  <ion-icon name="stats-chart-outline" (click)="gotoHomePage()"> </ion-icon>
-</ion-button>
