adding alot of functions

--- a/client/src/app/pages/cart/cart.page.html
+++ b/client/src/app/pages/cart/cart.page.html
@@ -19,17 +19,17 @@
   <div class="payment">
     <div class="payment-details">
       <div class="detail">
-        <p class="title">Total ({{ totalItems }} item{{ totalItems != 1 ? 's' : '' }})</p>
-        <p class="number">{{ totalPrice }} DT</p>
+        <p class="title">Total t</p>
+        <p class="number">5 DT</p>
       </div>
       <div class="detail">
         <p class="title">Shipping Fee</p>
-        <p class="number">{{ shippingFee }} DT</p>
+        <p class="number">2 DT</p>
       </div>
       <hr class="divider">
       <div class="detail">
         <p class="title">Sub Total</p>
-        <p class="number">{{ subTotal }} DT</p>
+        <p class="number">112 DT</p>
       </div>
     </div>
     <ion-button class="pay-button" fill="clear" href="/payment">
