--- a/client/src/app/pages/home-p3/home-p3.page.html
+++ b/client/src/app/pages/home-p3/home-p3.page.html
@@ -18,12 +18,12 @@
   </div>
 
   <div class="button-container">
-    <ion-button style="--background:#9894b4" class="button-periwinkle" href="/all-items">
+    <ion-button style="--background:#9894b4" class="button-periwinkle" href="/signup">
       <h5 slot="start">Sign up</h5>
     </ion-button>
   </div>
 
-  <ion-button class="skip-btn" fill="clear" href="/all-items">
+  <ion-button class="skip-btn" fill="clear" href="/login">
     <p slot="start" class="large-semi-bold">Already have an account?</p>
   </ion-button>
 
