--- a/client/src/app/pages/item-details/item-details.page.html
+++ b/client/src/app/pages/item-details/item-details.page.html
@@ -15,16 +15,16 @@
 
   <div class="item-details">
     <div class="item-name">
-      <p class="name">Black Boots</p>
+      <p class="name">{{ selectedItem?.product_name }}</p>
     </div>
     <div class="item-price">
-      <p class="price">200 DT</p>
+      <p class="price">{{ selectedItem?.price }}</p>
     </div>
   </div>
 
   <div class="description">
     <p class="description-title">Description</p>
-    <p class="parag">cherry leather boots made with authentic leather.</p>
+    <p class="parag">{{ selectedItem?.description }}</p>
   </div>
 
   <div class="bezbez-details">
