--- a/client/src/app/pages/payment/payment.page.html
+++ b/client/src/app/pages/payment/payment.page.html
@@ -40,7 +40,7 @@
 
 <ion-footer>
   <div class="bottom-navbar">
-    <ion-button style="--background:#374375" class="button-navy" href="/payment-success">
+    <ion-button style="--background:#374375" class="button-navy" (click)="checkout()">
       <h5 slot="start">Checkout Now</h5>
     </ion-button>
   </div>
