--- a/client/src/app/pages/signup/signup.page.html
+++ b/client/src/app/pages/signup/signup.page.html
@@ -10,7 +10,7 @@
 <br><br><br>
 
 <ion-content padding>
-  <form #registrationForm="ngForm" (ngSubmit)="onSubmit(registrationForm)">
+  <form (ngSubmit)="onSubmit()">
 
     <div class="mb-3 input-icon">
       <label for="firstName" class="form-label">First Name</label><br>
